# XMsg

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
Api/: CMakeLists.txt
Api/include/XMsg.Api/: XMsg.h
Api/src/: XMsg.h  ext_main.cpp
Api/src/Interface/: Interface.cpp  Interface.h
CMake/: CMakeUtils.cmake
NativeClient/: CMakeLists.txt
NativeClient/configs/: XPlatform.json  project.json
NativeClient/src/: main.cpp
NativeClient/src/Api/: Api.cpp  Api.h
NativeClient/src/ChatForm/: ChatForm.cpp  ChatForm.h
NativeClient/src/ChatForm/langs/: lang_eu.h  lang_ru.h
NativeClient/src/Font/: Font.h
NativeClient/src/FormManager/: FormManager.cpp  FormManager.h
NativeClient/src/GUI/: GUI.cpp  GUI.h
NativeClient/src/LoginForm/: LoginForm.cpp  LoginForm.h
NativeClient/src/LoginForm/langs/: lang_eu.h  lang_ru.h
NativeClient/src/Texture/: Texture.cpp  Texture.h
NativeClient/src/Window/: Window.cpp  Window.h
Server/: CMakeLists.txt
Server/certs/: cert.pem  key.pem
Server/configs/: XPlatform.json  project.json
Server/src/: main.cpp
Server/src/Api/: Api.cpp  Api.h
Server/src/Application/: Application.cpp  Application.h
Server/src/ProtocolHandler/: ProtocolHandler.cpp  ProtocolHandler.h
Server/src/UserBase/: UserBase.cpp  UserBase.h
XPlatform/: CMakeLists.txt
